# RAG-Powered-Customer-Service-Chatbot

./: README.md  embed_data.py  frontend.py  main.py  pyproject.toml  query_classifier.py  rag_retrieval.py  store_embeddings.py
data/: billings.txt  general.txt  technical.txt
train_data/: training_data.toml
